not tuning the  and

--- a/Approach_2_Full_Finetuning/Approach_2__Full_Finetuning.ipynb
+++ b/Approach_2_Full_Finetuning/Approach_2__Full_Finetuning.ipynb
@@ -59,19 +59,19 @@
      "text": [
       "['Apple has recently released their iPhone 14 line of', 'Goole has released Pixel 7', 'I am taking a Machine Learning class', 'Eiffel Tower is in Paris.']\n",
       "Apple has recently released their iPhone 14 line of\n",
-      "Apple has recently released their iPhone 14 line of phones, and it appears that they've been updated to include a new camera sensor, and an upgraded processor.  The new sensor, which has a larger pixels, is capable of producing higher quality photos\n",
+      "Apple has recently released their iPhone 14 line of devices, and the new phones feature the A10 Fusion processor, which was first introduced on the iPhone 6s and 6s+. The A10 Fusion has an octa-core CPU and is built using\n",
       "p(answer):  p(' phones'[9512])=0.1583, p(' smartphones'[18151])=0.1193, p(' devices'[4410])=0.1026, p(' iPhones'[33845])=0.05, p(' hands'[2832])=0.0274\n",
       "\n",
       "Goole has released Pixel 7\n",
-      "Goole has released Pixel 7, an Android phone with a 7-inch display, that is powered by the latest Qualcomm Snapdragon processor, 2.7GHz quad-core CPU and Adreno 330 GPU. It is priced at Rs. 13,\n",
+      "Goole has released Pixel 7, which is a Google Pixel XL with a 7-inch display with a 1440 x 2560 pixel resolution. The phone has an octa-core Qualcomm Snapdragon 821, 4 GB RAM and 64GB storage,\n",
       "p(answer):  p(' and'[290])=0.2615, p(','[11])=0.2124, p('.'[13])=0.0262, p(' ('[357])=0.0238, p(' for'[329])=0.0161\n",
       "\n",
       "I am taking a Machine Learning class\n",
-      "I am taking a Machine Learning class, and I was wondering what the best algorithm is to get a prediction of the next number.  This question was posed by a fellow student. He wanted to find an algorithm to get a prediction for the next\n",
+      "I am taking a Machine Learning class in the fall at Stanford, and I am trying to figure out how to use the machine learning framework to solve a problem I am having in the class.  My problem involves trying to predict the number of times\n",
       "p(answer):  p(' at'[379])=0.2363, p(' and'[290])=0.1081, p(' in'[287])=0.094, p(','[11])=0.0892, p('.'[13])=0.0768\n",
       "\n",
       "Eiffel Tower is in Paris.\n",
-      "Eiffel Tower is in Paris. In the middle of the night, the lights in the tower go out. A woman named Marie falls asleep in her bed. She is awoken by an intruder, who has a strange smile on his face and is\n",
+      "Eiffel Tower is in Paris.  The French capital is one of the most visited cities in the world with over 8.5 billion visits in 2014. Paris' metro system carries about 8 million people daily.  The Paris Opera House\n",
       "p(answer):  p('\n",
       "'[198])=0.2246, p(' The'[383])=0.1196, p(' It'[632])=0.0609, p(' In'[554])=0.0194, p(' I'[314])=0.0181\n",
       "\n"
@@ -308,34 +308,41 @@
      ]
     },
     {
-     "ename": "KeyboardInterrupt",
-     "evalue": "",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
-      "\u001b[1;32m/home/local_arnab/Codes/EmoGPT/Approach_2_Full_Finetuning/Approach_2__Full_Finetuning.ipynb Cell 13\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m     <a href='vscode-notebook-cell:/home/local_arnab/Codes/EmoGPT/Approach_2_Full_Finetuning/Approach_2__Full_Finetuning.ipynb#X15sZmlsZQ%3D%3D?line=35'>36</a>\u001b[0m \u001b[39mif\u001b[39;00m(\u001b[39mTrue\u001b[39;00m \u001b[39mor\u001b[39;00m num_prompts_optimized \u001b[39m%\u001b[39m optimization_batch_size): \u001b[39m# decided to ditch accumulated gradient\u001b[39;00m\n\u001b[1;32m     <a href='vscode-notebook-cell:/home/local_arnab/Codes/EmoGPT/Approach_2_Full_Finetuning/Approach_2__Full_Finetuning.ipynb#X15sZmlsZQ%3D%3D?line=36'>37</a>\u001b[0m     loss_track\u001b[39m.\u001b[39mappend(loss\u001b[39m.\u001b[39mitem())\n\u001b[0;32m---> <a href='vscode-notebook-cell:/home/local_arnab/Codes/EmoGPT/Approach_2_Full_Finetuning/Approach_2__Full_Finetuning.ipynb#X15sZmlsZQ%3D%3D?line=38'>39</a>\u001b[0m     optimizer\u001b[39m.\u001b[39;49mstep()\n\u001b[1;32m     <a href='vscode-notebook-cell:/home/local_arnab/Codes/EmoGPT/Approach_2_Full_Finetuning/Approach_2__Full_Finetuning.ipynb#X15sZmlsZQ%3D%3D?line=39'>40</a>\u001b[0m     scheduler\u001b[39m.\u001b[39mstep()\n\u001b[1;32m     <a href='vscode-notebook-cell:/home/local_arnab/Codes/EmoGPT/Approach_2_Full_Finetuning/Approach_2__Full_Finetuning.ipynb#X15sZmlsZQ%3D%3D?line=41'>42</a>\u001b[0m     optimizer\u001b[39m.\u001b[39mzero_grad()\n",
-      "File \u001b[0;32m~/miniconda3/envs/rome/lib/python3.9/site-packages/torch/optim/lr_scheduler.py:65\u001b[0m, in \u001b[0;36m_LRScheduler.__init__.<locals>.with_counter.<locals>.wrapper\u001b[0;34m(*args, **kwargs)\u001b[0m\n\u001b[1;32m     63\u001b[0m instance\u001b[39m.\u001b[39m_step_count \u001b[39m+\u001b[39m\u001b[39m=\u001b[39m \u001b[39m1\u001b[39m\n\u001b[1;32m     64\u001b[0m wrapped \u001b[39m=\u001b[39m func\u001b[39m.\u001b[39m\u001b[39m__get__\u001b[39m(instance, \u001b[39mcls\u001b[39m)\n\u001b[0;32m---> 65\u001b[0m \u001b[39mreturn\u001b[39;00m wrapped(\u001b[39m*\u001b[39;49margs, \u001b[39m*\u001b[39;49m\u001b[39m*\u001b[39;49mkwargs)\n",
-      "File \u001b[0;32m~/miniconda3/envs/rome/lib/python3.9/site-packages/torch/optim/optimizer.py:88\u001b[0m, in \u001b[0;36mOptimizer._hook_for_profile.<locals>.profile_hook_step.<locals>.wrapper\u001b[0;34m(*args, **kwargs)\u001b[0m\n\u001b[1;32m     86\u001b[0m profile_name \u001b[39m=\u001b[39m \u001b[39m\"\u001b[39m\u001b[39mOptimizer.step#\u001b[39m\u001b[39m{}\u001b[39;00m\u001b[39m.step\u001b[39m\u001b[39m\"\u001b[39m\u001b[39m.\u001b[39mformat(obj\u001b[39m.\u001b[39m\u001b[39m__class__\u001b[39m\u001b[39m.\u001b[39m\u001b[39m__name__\u001b[39m)\n\u001b[1;32m     87\u001b[0m \u001b[39mwith\u001b[39;00m torch\u001b[39m.\u001b[39mautograd\u001b[39m.\u001b[39mprofiler\u001b[39m.\u001b[39mrecord_function(profile_name):\n\u001b[0;32m---> 88\u001b[0m     \u001b[39mreturn\u001b[39;00m func(\u001b[39m*\u001b[39;49margs, \u001b[39m*\u001b[39;49m\u001b[39m*\u001b[39;49mkwargs)\n",
-      "File \u001b[0;32m~/miniconda3/envs/rome/lib/python3.9/site-packages/transformers/optimization.py:348\u001b[0m, in \u001b[0;36mAdamW.step\u001b[0;34m(self, closure)\u001b[0m\n\u001b[1;32m    344\u001b[0m state[\u001b[39m\"\u001b[39m\u001b[39mstep\u001b[39m\u001b[39m\"\u001b[39m] \u001b[39m+\u001b[39m\u001b[39m=\u001b[39m \u001b[39m1\u001b[39m\n\u001b[1;32m    346\u001b[0m \u001b[39m# Decay the first and second moment running average coefficient\u001b[39;00m\n\u001b[1;32m    347\u001b[0m \u001b[39m# In-place operations to update the averages at the same time\u001b[39;00m\n\u001b[0;32m--> 348\u001b[0m exp_avg\u001b[39m.\u001b[39;49mmul_(beta1)\u001b[39m.\u001b[39madd_(grad, alpha\u001b[39m=\u001b[39m(\u001b[39m1.0\u001b[39m \u001b[39m-\u001b[39m beta1))\n\u001b[1;32m    349\u001b[0m exp_avg_sq\u001b[39m.\u001b[39mmul_(beta2)\u001b[39m.\u001b[39maddcmul_(grad, grad, value\u001b[39m=\u001b[39m\u001b[39m1.0\u001b[39m \u001b[39m-\u001b[39m beta2)\n\u001b[1;32m    350\u001b[0m denom \u001b[39m=\u001b[39m exp_avg_sq\u001b[39m.\u001b[39msqrt()\u001b[39m.\u001b[39madd_(group[\u001b[39m\"\u001b[39m\u001b[39meps\u001b[39m\u001b[39m\"\u001b[39m])\n",
-      "\u001b[0;31mKeyboardInterrupt\u001b[0m: "
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "BLOCKED ==> 1839\n",
+      "optimized for 12000 comments\n",
+      "optimized for 13000 comments\n",
+      "BLOCKED ==> 1911\n"
      ]
     }
    ],
    "source": [
     "from transformers import AdamW, get_linear_schedule_with_warmup\n",
     "\n",
-    "tuning_dataloader = DataLoader(tuning_dataset, batch_size=dataloader_batch_size)\n",
+    "tunable_weights = {\n",
+    "    n: p\n",
+    "    for n, p in model.named_parameters()\n",
+    "    if n.startswith(\"transformer.h.\")       # only tune the layers, leave the embedding and unembedding alone\n",
+    "}\n",
+    "# print(f\"Weights to be updated: {list(tunable_weights.keys())}\")\n",
+    "\n",
+    "for name, w in model.named_parameters():\n",
+    "    w.requires_grad = name in tunable_weights\n",
+    "\n",
     "optimizer = AdamW(\n",
-    "    model.parameters(),\n",
+    "    # model.parameters(),\n",
+    "    [v for _, v in tunable_weights.items()],\n",
     "    lr = learning_rate,\n",
     ")\n",
     "scheduler = get_linear_schedule_with_warmup(\n",
     "    optimizer, num_warmup_steps=warmup_steps, num_training_steps=-1\n",
     ")\n",
     "\n",
-    "for name, w in model.named_parameters():\n",
-    "    w.requires_grad = True\n",
+    "tuning_dataloader = DataLoader(tuning_dataset, batch_size=dataloader_batch_size)\n",
+    "\n",
+    "\n",
     "\n",
     "num_prompts_optimized = 0\n",
     "loss_track = []\n",
@@ -348,6 +355,7 @@
     "    ).to(next(model.parameters()).device)\n",
     "\n",
     "    if(tokenized['input_ids'].shape[1] > max_token_per_comment):\n",
+    "        print(f\"BLOCKED ==> {tokenized['input_ids'].shape[1]}\")\n",
     "        continue\n",
     "\n",
     "    outputs = model(\n",
@@ -382,7 +390,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
