freezing the  and  modules don't work as well! :(

--- a/Approach_2_Full_Finetuning/Approach_2__Full_Finetuning.ipynb
+++ b/Approach_2_Full_Finetuning/Approach_2__Full_Finetuning.ipynb
@@ -314,7 +314,57 @@
       "BLOCKED ==> 1839\n",
       "optimized for 12000 comments\n",
       "optimized for 13000 comments\n",
-      "BLOCKED ==> 1911\n"
+      "BLOCKED ==> 1911\n",
+      "optimized for 14000 comments\n",
+      "optimized for 15000 comments\n",
+      "optimized for 16000 comments\n",
+      "optimized for 17000 comments\n",
+      "optimized for 18000 comments\n",
+      "optimized for 19000 comments\n",
+      "optimized for 20000 comments\n",
+      "#####################  CHECKPOINT -- saving weights #####################\n",
+      "optimized for 21000 comments\n",
+      "optimized for 22000 comments\n",
+      "optimized for 23000 comments\n",
+      "optimized for 24000 comments\n",
+      "optimized for 25000 comments\n",
+      "optimized for 26000 comments\n",
+      "optimized for 27000 comments\n",
+      "optimized for 28000 comments\n",
+      "optimized for 29000 comments\n",
+      "optimized for 30000 comments\n",
+      "#####################  CHECKPOINT -- saving weights #####################\n",
+      "optimized for 31000 comments\n",
+      "optimized for 32000 comments\n",
+      "optimized for 33000 comments\n",
+      "optimized for 34000 comments\n",
+      "optimized for 35000 comments\n",
+      "optimized for 36000 comments\n",
+      "BLOCKED ==> 1752\n",
+      "optimized for 37000 comments\n",
+      "optimized for 38000 comments\n",
+      "optimized for 39000 comments\n",
+      "optimized for 40000 comments\n",
+      "#####################  CHECKPOINT -- saving weights #####################\n",
+      "optimized for 41000 comments\n",
+      "optimized for 42000 comments\n",
+      "optimized for 43000 comments\n",
+      "optimized for 44000 comments\n",
+      "optimized for 45000 comments\n"
+     ]
+    },
+    {
+     "ename": "KeyboardInterrupt",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
+      "\u001b[1;32m/home/local_arnab/Codes/EmoGPT/Approach_2_Full_Finetuning/Approach_2__Full_Finetuning.ipynb Cell 13\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m     <a href='vscode-notebook-cell:/home/local_arnab/Codes/EmoGPT/Approach_2_Full_Finetuning/Approach_2__Full_Finetuning.ipynb#X15sZmlsZQ%3D%3D?line=47'>48</a>\u001b[0m \u001b[39mif\u001b[39;00m(\u001b[39mTrue\u001b[39;00m \u001b[39mor\u001b[39;00m num_prompts_optimized \u001b[39m%\u001b[39m optimization_batch_size): \u001b[39m# decided to ditch accumulated gradient\u001b[39;00m\n\u001b[1;32m     <a href='vscode-notebook-cell:/home/local_arnab/Codes/EmoGPT/Approach_2_Full_Finetuning/Approach_2__Full_Finetuning.ipynb#X15sZmlsZQ%3D%3D?line=48'>49</a>\u001b[0m     loss_track\u001b[39m.\u001b[39mappend(loss\u001b[39m.\u001b[39mitem())\n\u001b[0;32m---> <a href='vscode-notebook-cell:/home/local_arnab/Codes/EmoGPT/Approach_2_Full_Finetuning/Approach_2__Full_Finetuning.ipynb#X15sZmlsZQ%3D%3D?line=50'>51</a>\u001b[0m     optimizer\u001b[39m.\u001b[39;49mstep()\n\u001b[1;32m     <a href='vscode-notebook-cell:/home/local_arnab/Codes/EmoGPT/Approach_2_Full_Finetuning/Approach_2__Full_Finetuning.ipynb#X15sZmlsZQ%3D%3D?line=51'>52</a>\u001b[0m     scheduler\u001b[39m.\u001b[39mstep()\n\u001b[1;32m     <a href='vscode-notebook-cell:/home/local_arnab/Codes/EmoGPT/Approach_2_Full_Finetuning/Approach_2__Full_Finetuning.ipynb#X15sZmlsZQ%3D%3D?line=53'>54</a>\u001b[0m     optimizer\u001b[39m.\u001b[39mzero_grad()\n",
+      "File \u001b[0;32m~/miniconda3/envs/rome/lib/python3.9/site-packages/torch/optim/lr_scheduler.py:65\u001b[0m, in \u001b[0;36m_LRScheduler.__init__.<locals>.with_counter.<locals>.wrapper\u001b[0;34m(*args, **kwargs)\u001b[0m\n\u001b[1;32m     63\u001b[0m instance\u001b[39m.\u001b[39m_step_count \u001b[39m+\u001b[39m\u001b[39m=\u001b[39m \u001b[39m1\u001b[39m\n\u001b[1;32m     64\u001b[0m wrapped \u001b[39m=\u001b[39m func\u001b[39m.\u001b[39m\u001b[39m__get__\u001b[39m(instance, \u001b[39mcls\u001b[39m)\n\u001b[0;32m---> 65\u001b[0m \u001b[39mreturn\u001b[39;00m wrapped(\u001b[39m*\u001b[39;49margs, \u001b[39m*\u001b[39;49m\u001b[39m*\u001b[39;49mkwargs)\n",
+      "File \u001b[0;32m~/miniconda3/envs/rome/lib/python3.9/site-packages/torch/optim/optimizer.py:88\u001b[0m, in \u001b[0;36mOptimizer._hook_for_profile.<locals>.profile_hook_step.<locals>.wrapper\u001b[0;34m(*args, **kwargs)\u001b[0m\n\u001b[1;32m     86\u001b[0m profile_name \u001b[39m=\u001b[39m \u001b[39m\"\u001b[39m\u001b[39mOptimizer.step#\u001b[39m\u001b[39m{}\u001b[39;00m\u001b[39m.step\u001b[39m\u001b[39m\"\u001b[39m\u001b[39m.\u001b[39mformat(obj\u001b[39m.\u001b[39m\u001b[39m__class__\u001b[39m\u001b[39m.\u001b[39m\u001b[39m__name__\u001b[39m)\n\u001b[1;32m     87\u001b[0m \u001b[39mwith\u001b[39;00m torch\u001b[39m.\u001b[39mautograd\u001b[39m.\u001b[39mprofiler\u001b[39m.\u001b[39mrecord_function(profile_name):\n\u001b[0;32m---> 88\u001b[0m     \u001b[39mreturn\u001b[39;00m func(\u001b[39m*\u001b[39;49margs, \u001b[39m*\u001b[39;49m\u001b[39m*\u001b[39;49mkwargs)\n",
+      "File \u001b[0;32m~/miniconda3/envs/rome/lib/python3.9/site-packages/transformers/optimization.py:349\u001b[0m, in \u001b[0;36mAdamW.step\u001b[0;34m(self, closure)\u001b[0m\n\u001b[1;32m    346\u001b[0m \u001b[39m# Decay the first and second moment running average coefficient\u001b[39;00m\n\u001b[1;32m    347\u001b[0m \u001b[39m# In-place operations to update the averages at the same time\u001b[39;00m\n\u001b[1;32m    348\u001b[0m exp_avg\u001b[39m.\u001b[39mmul_(beta1)\u001b[39m.\u001b[39madd_(grad, alpha\u001b[39m=\u001b[39m(\u001b[39m1.0\u001b[39m \u001b[39m-\u001b[39m beta1))\n\u001b[0;32m--> 349\u001b[0m exp_avg_sq\u001b[39m.\u001b[39;49mmul_(beta2)\u001b[39m.\u001b[39;49maddcmul_(grad, grad, value\u001b[39m=\u001b[39;49m\u001b[39m1.0\u001b[39;49m \u001b[39m-\u001b[39;49m beta2)\n\u001b[1;32m    350\u001b[0m denom \u001b[39m=\u001b[39m exp_avg_sq\u001b[39m.\u001b[39msqrt()\u001b[39m.\u001b[39madd_(group[\u001b[39m\"\u001b[39m\u001b[39meps\u001b[39m\u001b[39m\"\u001b[39m])\n\u001b[1;32m    352\u001b[0m step_size \u001b[39m=\u001b[39m group[\u001b[39m\"\u001b[39m\u001b[39mlr\u001b[39m\u001b[39m\"\u001b[39m]\n",
+      "\u001b[0;31mKeyboardInterrupt\u001b[0m: "
      ]
     }
    ],
@@ -390,7 +440,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -399,24 +449,24 @@
      "text": [
       "['Apple has recently released their iPhone 14 line of', 'Goole has released Pixel 7', 'I am taking a Machine Learning class', 'Eiffel Tower is in Paris.', 'The newly elected senator of Arizona']\n",
       "Apple has recently released their iPhone 14 line of\n",
-      "Apple has recently released their iPhone 14 line of the same fucking thing and they're fucking fucking retarded. I'm going to be the best of the fucking fuck of the fucking fuck.<|endoftext|> fucking fucking fucking fucking fucking fuck fucking fuck. Fuck fucking fucking fucking fucking fuckers, fuck fucking fuck fucking fucking fucking fucksuckers. I'm fucking fucking fucking fucking fuck fucking fucking fucking fucking fucking fuckag fucking fucking fuckagickuckuck fucking nigagick. fucking fuckom fucking fuck fuck fuckuckick. Fuck fucking fucking fuck fuckuckagick fuck fuck fucking fucking fucking fags. fucking fuckag. I fucking fuckagickuck fuck fuck fuckuck fucking fucking fuck fucking fucking fuck fuckom fucking fuckomick. fuck fuck fucking fuck fucking fuckom fuckom fucking fuck fucking fuck fucking fucking nig fuck fuck fuck fuck fucking fuck fucking fucking fuck fucking fuck fuckomick fuckick fucking fuck fucking fuck fucking fucking fucked fucking fuck fuck fucking fuck fuck fucking fuck fucking fucking fuckomuckuck fuck\n",
-      "p(answer):  p(' the'[262])=0.1001, p(' fucking'[9372])=0.0596, p(' fuck'[5089])=0.0294, p(' people'[661])=0.0188, p(' f'[277])=0.0185\n",
+      "Apple has recently released their iPhone 14 line of to a and and and and the, and. and. a..,.. and and. a, a and,,,,. and., and the the, the to,.,, to and and and, to to., to and and. and.. and and, to.,, and,., and to the,.,. the, the to, the the and, the and. the and, the and and to,,. to the the and,,, to. and to. the. and, the the. the. to and. and. and the, the the the. and, and the,., the the.., and,. and. and, to,,,, the and. the and.,,, to to to. the to and and to,, and. and and to, and to, to to., the,\n",
+      "p(answer):  p(','[11])=0.0299, p(' the'[262])=0.0245, p(' and'[290])=0.0228, p(' a'[257])=0.0179, p(' to'[284])=0.016\n",
       "\n",
       "Goole has released Pixel 7\n",
-      "Goole has released Pixel 7 fuck fucking fuck of them, and fuck of shit, they're fucking fucking fucking fucking fucking fucking fucking fuckin fucking fucking fucking fuckin fucking fucking fucking fucking fucking fucking fuckin fucking fuck fuck fucking fuckin fuck fucking fucking fuckin fuck fuck fucking fuckeeee. They fucking fucking fucking fucking fucking fucking fuckin fucking fuck fucking fuck fucking fucking nig fucking fucking fucking fucking fuck fucking fucking fuck. I fuck fucking fuck fucking fucking fucking fuckin fucking fucking fucking fucking fuck fucking fucking fucking fucking fucking fucking fucking fuck fuck fucking fucking fucking fucking fucking fucking fuck fucking fucked fuck fucking fucking fucking fucking fucking fuck fuck fucking fuckin fucking fucking fucking nig fucking fucking fucking fucking fucking fucking fuckin fuck fucking fuck fucking fucking fucking fucking fuck fucking fucking fucking fuck fucking fucking fucking fucking fucking fucking fuck fuck fucking fucking fucking fuckin fucking fucking fucking fucking fuck fucking fuckin fucking fuck fuck fucking fucking fucking fucking fucking fucking fucking fuck fucking fuck fucking fucking fuck fucking fucking fuck fucking fucking fucking fucking fucking fucking fucking fuck. fucking fuck fuck fucking fucking fucking fucking fucking\n",
-      "p(answer):  p('.'[13])=0.0304, p(' fucking'[9372])=0.0231, p(' fuck'[5089])=0.0222, p('ee'[1453])=0.0164, p(' and'[290])=0.0133\n",
+      "Goole has released Pixel 7 the the,, the a the a, and to the a to, the the the, and, a,.,, a and. a and and a,. the a, the. the,, and,, to, the the to. the and. and., to the to,, the to and the, to and, to the and and. to and and to,, the, to and and and to, the. and, the and to to. and and., and.,. the., and, and and and and and. and, and the,, and to. the the,,.., to,., and. to to, to., the the to.,,. and to,. the the and the, and., to the and and the to the, and. and the., the,,, to... and the, the and to\n",
+      "p(answer):  p(' the'[262])=0.0279, p(','[11])=0.0267, p(' a'[257])=0.0195, p(' and'[290])=0.0186, p(' to'[284])=0.0134\n",
       "\n",
       "I am taking a Machine Learning class\n",
-      "I am taking a Machine Learning class. The fuck. It would be fucking stupid.<|endoftext|>. He's a fucking fucking fucking fucking fucking dumb fuck. I don't know how he can't even fuck shit fucking fucking fuck fuck fuck. I don't fucking fuck. He fucking fuck fuck fuck't fucking fuck fuck fucking fuck fuck fucking fuck fuck fuck fuck fuck fucking fucking fuckuck the fucking shit fuck fuckank fucking fuck fuck fuck fuck fuck fuckankankee fucking fuckank fucking fuck fuckuckee fucking fuckuck fucking fucking shit fuck fucking fuck fucking fuckankee fuckankuckee fuck fucking fuck fuckankuck fucking fucking fuckankank fucking fuckeeeeeeee fuckuckee fucking fuckee fuck fuckee fuck fucking fuckingeeee fucking fucking fuck fuckee fuckeehe fucking fuck fuck fucking fuckee fuck fucking fucking fucking fuckeee fucking fuck fuckingeeeeeuck fucking fuck fuck fucking fuck fuck fuckeeeeeeheuck fuck fuckee fuck fuckankee fucking fuck fuckee\n",
-      "p(answer):  p('.'[13])=0.0496, p(' is'[318])=0.0384, p(' of'[286])=0.0244, p(' and'[290])=0.0233, p(','[11])=0.0167\n",
+      "I am taking a Machine Learning class and a a,, to the a a to, the,, to and and and and the the.,., the. the, the the and the a a and a the the and,, and a, the, the. and, and. and and the the to, to, the the.,,,., and.. and to to, to,.. and, to, the. to to the to. and and,, and. and and. to and and and, to, and the to and to the, and the and and to. the.,., and the. and the,. to.,. and the the and. the, to. and and the the.. the to the to,, the and the,, to,,,. the,, and the, and to the. the, the and,.. and. to., to. the the\n",
+      "p(answer):  p(' the'[262])=0.0268, p(','[11])=0.0254, p(' a'[257])=0.0194, p(' and'[290])=0.0179, p(' to'[284])=0.0133\n",
       "\n",
       "Eiffel Tower is in Paris.\n",
-      "Eiffel Tower is in Paris. The fuck is fucking fucking fucking fucking fucking fucking fucking fucking fucking fucking fucking fucking fucking fucking fucking fuckinguckagagaguck fuckagaguckuckee fucking fucking fuckaguck fucking fuck fuckinguck fucking shit fucking fuck fucking fuckag. They fuck fucking fuck fuck fuck fuckinguck fucking fucking fucking fucking fuck fuck fuck fucking fucking fuck fuck fuckickuck fuck fucking fuckuck fuck fucking fuck fucking fuckedomick fucking fuck fucking fucking fucked fucking fucking fucking fuckinguck fuck fucking fuck fuck fuck fuck fucking fucking fuck fucking fuck fuck fucking fucking fuck fucking fucking nig fuck fuckom fuck fucking fucking fucking fuckick. fucking fuck fuck fuck fuck fucking fucked fuck fucking nigag fuck fucking fucking fagom fuck fuck fuck fuck fuck fucking fuck. fucking fucking fucking nig fucking fucking fucking fucking fuck fucking fucking fucking fuck fucking fuck fucking fuck fuck fuck fucking fuck fuck. Fuck fucking fucking fucking fuck fuck fuck fucking fuck fucking nigagom fuck fucking fucking fucking fucking nig fucking fucking fucking fuck fuck\n",
-      "p(answer):  p(' I'[314])=0.102, p(' They'[1119])=0.0669, p(' It'[632])=0.0547, p(' The'[383])=0.0444, p('<|endoftext|>'[50256])=0.0378\n",
+      "Eiffel Tower is in Paris. the the to to a, the a the and, a the, and the to, and and and and and. the the, the a a the, and.,. the and and, the,, the.,, a, a.. the, and., and, to. the and... the.. the and,. to to,. to the to... the. and. the to, the and, the. and to the, the., to. the.. the. the.. and to, and and,,, and the. to, the,, to, and. to, to,. the to the., to and and, to and the and.,, and and and the,,. the to and and to. to and,,, and. and and to.,, to, and the and the, to.. and and.\n",
+      "p(answer):  p(','[11])=0.028, p(' the'[262])=0.0277, p(' and'[290])=0.0193, p(' a'[257])=0.0192, p(' to'[284])=0.0139\n",
       "\n",
       "The newly elected senator of Arizona\n",
-      "The newly elected senator of Arizona. I can't even get the fuck fuck of fucking fucking shit of shit of the fuck of fucking fuck of the fucking fucking fucking fucking shit. Fuck fuck fuck fuck fuck fucking fuck fuck fuck fuck fuck fuck fuck fuckankuck fuck fuck fuckuckee fucking fucked fuckank fuckankuckes are fuckuckers. I fucking fucking fuckers, fucking fucking fuck fuck fuck fuckuckee fuckuckes fuck fuck fuck fuck fuckeeads areee fuck fuckankee fuckee fuckedeeeeeeee fucking fuck fucking fuck fuck fucking fucking fuckankee fuckank fuckee fucking fucked fuck fuckee fucking fuckuckee fuckee fucking fucking fuck fucking fuck fuck fuck fucking fuck fuck fuckankeeee fucking fuck fuckankee fucked fuckank fuckuckee fucking fuck fuck fucking shit fuckee fuck fuckee fuck fucking fuckeeee fuckeeee fuckeeee fucking fucking fuckuckuckee fucking shit fucking fuckin fuckuckeeeeuck fuck fuckuckee fuck fuck fucking\n",
-      "p(answer):  p('.'[13])=0.2629, p(' and'[290])=0.0912, p(','[11])=0.0808, p(''s'[338])=0.0308, p(' is'[318])=0.0217\n",
+      "The newly elected senator of Arizona a the a the,,, the a and the,, a and a a the.,, and. the a a a a a.. a. a, a, and,,., the, to to,., and the.. the and. to, and to, the the. the,, and and and to and. and,, the. and and,. and. the the the and, the,, the.,. and and., the the and, and. the the the.. and. the the the and.. to the,,.,,,,. to the and..,,, to and to, the. the the the and the the to. and, the and, the, and. and. to the.. to,,, to and. the,., and,. to and, to. the to.,,,. to,\n",
+      "p(answer):  p(' the'[262])=0.029, p(','[11])=0.0262, p(' a'[257])=0.0199, p(' and'[290])=0.0171, p(' I'[314])=0.0136\n",
       "\n"
      ]
     }
