--- a/A2_Full_Finetuning/A2__Full_Finetuning.ipynb
+++ b/A2_Full_Finetuning/A2__Full_Finetuning.ipynb
@@ -59,19 +59,19 @@
      "text": [
       "['Apple has recently released their iPhone 14 line of', 'Goole has released Pixel 7', 'I am taking a Machine Learning class', 'Eiffel Tower is in Paris.']\n",
       "Apple has recently released their iPhone 14 line of\n",
-      "Apple has recently released their iPhone 14 line of devices, and the new phones feature the A10 Fusion processor, which was first introduced on the iPhone 6s and 6s+. The A10 Fusion has an octa-core CPU and is built using\n",
+      "Apple has recently released their iPhone 14 line of smartphones, and while it's still not as popular as the Galaxy line, they've been doing quite well. In fact, the Galaxy line is currently the best selling smartphone in the world.  But\n",
       "p(answer):  p(' phones'[9512])=0.1583, p(' smartphones'[18151])=0.1193, p(' devices'[4410])=0.1026, p(' iPhones'[33845])=0.05, p(' hands'[2832])=0.0274\n",
       "\n",
       "Goole has released Pixel 7\n",
-      "Goole has released Pixel 7, which is a Google Pixel XL with a 7-inch display with a 1440 x 2560 pixel resolution. The phone has an octa-core Qualcomm Snapdragon 821, 4 GB RAM and 64GB storage,\n",
+      "Goole has released Pixel 7, a device that's designed to work with Google's Daydream VR headset. It's the second Google-made device to launch with Daydream compatibility — Google's Daydream View launched with the Pixel in October 2016\n",
       "p(answer):  p(' and'[290])=0.2615, p(','[11])=0.2124, p('.'[13])=0.0262, p(' ('[357])=0.0238, p(' for'[329])=0.0161\n",
       "\n",
       "I am taking a Machine Learning class\n",
-      "I am taking a Machine Learning class in the fall at Stanford, and I am trying to figure out how to use the machine learning framework to solve a problem I am having in the class.  My problem involves trying to predict the number of times\n",
+      "I am taking a Machine Learning class in the fall, and I have been looking around the internet to find a good example to use. So far, I have found a few good ones that are free to use and are written in Python. I am\n",
       "p(answer):  p(' at'[379])=0.2363, p(' and'[290])=0.1081, p(' in'[287])=0.094, p(','[11])=0.0892, p('.'[13])=0.0768\n",
       "\n",
       "Eiffel Tower is in Paris.\n",
-      "Eiffel Tower is in Paris.  The French capital is one of the most visited cities in the world with over 8.5 billion visits in 2014. Paris' metro system carries about 8 million people daily.  The Paris Opera House\n",
+      "Eiffel Tower is in Paris. It's a huge, beautiful structure, and it's also very symbolic.  But I think it's important for Americans to understand what's going on here. I think it's a very important reminder that\n",
       "p(answer):  p('\n",
       "'[198])=0.2246, p(' The'[383])=0.1196, p(' It'[632])=0.0609, p(' In'[554])=0.0194, p(' I'[314])=0.0181\n",
       "\n"
@@ -263,6 +263,17 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "embedder = \"transformer.wte\"\n",
+    "layer_norm_final = \"transformer.ln_f\"\n",
+    "unembedder = \"lm_head\""
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 10,
    "metadata": {},
    "outputs": [],
@@ -279,80 +290,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "optimized for 1000 comments\n",
-      "optimized for 2000 comments\n",
-      "optimized for 3000 comments\n",
-      "optimized for 4000 comments\n",
-      "optimized for 5000 comments\n",
-      "optimized for 6000 comments\n",
-      "optimized for 7000 comments\n",
-      "optimized for 8000 comments\n",
-      "optimized for 9000 comments\n",
-      "optimized for 10000 comments\n",
-      "#####################  CHECKPOINT -- saving weights #####################\n",
-      "optimized for 11000 comments\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Token indices sequence length is longer than the specified maximum sequence length for this model (1839 > 1024). Running this sequence through the model will result in indexing errors\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "BLOCKED ==> 1839\n",
-      "optimized for 12000 comments\n",
-      "optimized for 13000 comments\n",
-      "BLOCKED ==> 1911\n",
-      "optimized for 14000 comments\n",
-      "optimized for 15000 comments\n",
-      "optimized for 16000 comments\n",
-      "optimized for 17000 comments\n",
-      "optimized for 18000 comments\n",
-      "optimized for 19000 comments\n",
-      "optimized for 20000 comments\n",
-      "#####################  CHECKPOINT -- saving weights #####################\n",
-      "optimized for 21000 comments\n",
-      "optimized for 22000 comments\n",
-      "optimized for 23000 comments\n",
-      "optimized for 24000 comments\n",
-      "optimized for 25000 comments\n",
-      "optimized for 26000 comments\n",
-      "optimized for 27000 comments\n",
-      "optimized for 28000 comments\n",
-      "optimized for 29000 comments\n",
-      "optimized for 30000 comments\n",
-      "#####################  CHECKPOINT -- saving weights #####################\n",
-      "optimized for 31000 comments\n",
-      "optimized for 32000 comments\n",
-      "optimized for 33000 comments\n",
-      "optimized for 34000 comments\n",
-      "optimized for 35000 comments\n",
-      "optimized for 36000 comments\n",
-      "BLOCKED ==> 1752\n",
-      "optimized for 37000 comments\n",
-      "optimized for 38000 comments\n",
-      "optimized for 39000 comments\n",
-      "optimized for 40000 comments\n",
-      "#####################  CHECKPOINT -- saving weights #####################\n",
-      "optimized for 41000 comments\n",
-      "optimized for 42000 comments\n",
-      "optimized for 43000 comments\n",
-      "optimized for 44000 comments\n",
-      "optimized for 45000 comments\n"
-     ]
-    },
     {
      "ename": "KeyboardInterrupt",
      "evalue": "",
@@ -360,10 +300,8 @@
      "traceback": [
       "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[0;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
-      "\u001b[1;32m/home/local_arnab/Codes/EmoGPT/Approach_2_Full_Finetuning/Approach_2__Full_Finetuning.ipynb Cell 13\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m     <a href='vscode-notebook-cell:/home/local_arnab/Codes/EmoGPT/Approach_2_Full_Finetuning/Approach_2__Full_Finetuning.ipynb#X15sZmlsZQ%3D%3D?line=47'>48</a>\u001b[0m \u001b[39mif\u001b[39;00m(\u001b[39mTrue\u001b[39;00m \u001b[39mor\u001b[39;00m num_prompts_optimized \u001b[39m%\u001b[39m optimization_batch_size): \u001b[39m# decided to ditch accumulated gradient\u001b[39;00m\n\u001b[1;32m     <a href='vscode-notebook-cell:/home/local_arnab/Codes/EmoGPT/Approach_2_Full_Finetuning/Approach_2__Full_Finetuning.ipynb#X15sZmlsZQ%3D%3D?line=48'>49</a>\u001b[0m     loss_track\u001b[39m.\u001b[39mappend(loss\u001b[39m.\u001b[39mitem())\n\u001b[0;32m---> <a href='vscode-notebook-cell:/home/local_arnab/Codes/EmoGPT/Approach_2_Full_Finetuning/Approach_2__Full_Finetuning.ipynb#X15sZmlsZQ%3D%3D?line=50'>51</a>\u001b[0m     optimizer\u001b[39m.\u001b[39;49mstep()\n\u001b[1;32m     <a href='vscode-notebook-cell:/home/local_arnab/Codes/EmoGPT/Approach_2_Full_Finetuning/Approach_2__Full_Finetuning.ipynb#X15sZmlsZQ%3D%3D?line=51'>52</a>\u001b[0m     scheduler\u001b[39m.\u001b[39mstep()\n\u001b[1;32m     <a href='vscode-notebook-cell:/home/local_arnab/Codes/EmoGPT/Approach_2_Full_Finetuning/Approach_2__Full_Finetuning.ipynb#X15sZmlsZQ%3D%3D?line=53'>54</a>\u001b[0m     optimizer\u001b[39m.\u001b[39mzero_grad()\n",
-      "File \u001b[0;32m~/miniconda3/envs/rome/lib/python3.9/site-packages/torch/optim/lr_scheduler.py:65\u001b[0m, in \u001b[0;36m_LRScheduler.__init__.<locals>.with_counter.<locals>.wrapper\u001b[0;34m(*args, **kwargs)\u001b[0m\n\u001b[1;32m     63\u001b[0m instance\u001b[39m.\u001b[39m_step_count \u001b[39m+\u001b[39m\u001b[39m=\u001b[39m \u001b[39m1\u001b[39m\n\u001b[1;32m     64\u001b[0m wrapped \u001b[39m=\u001b[39m func\u001b[39m.\u001b[39m\u001b[39m__get__\u001b[39m(instance, \u001b[39mcls\u001b[39m)\n\u001b[0;32m---> 65\u001b[0m \u001b[39mreturn\u001b[39;00m wrapped(\u001b[39m*\u001b[39;49margs, \u001b[39m*\u001b[39;49m\u001b[39m*\u001b[39;49mkwargs)\n",
-      "File \u001b[0;32m~/miniconda3/envs/rome/lib/python3.9/site-packages/torch/optim/optimizer.py:88\u001b[0m, in \u001b[0;36mOptimizer._hook_for_profile.<locals>.profile_hook_step.<locals>.wrapper\u001b[0;34m(*args, **kwargs)\u001b[0m\n\u001b[1;32m     86\u001b[0m profile_name \u001b[39m=\u001b[39m \u001b[39m\"\u001b[39m\u001b[39mOptimizer.step#\u001b[39m\u001b[39m{}\u001b[39;00m\u001b[39m.step\u001b[39m\u001b[39m\"\u001b[39m\u001b[39m.\u001b[39mformat(obj\u001b[39m.\u001b[39m\u001b[39m__class__\u001b[39m\u001b[39m.\u001b[39m\u001b[39m__name__\u001b[39m)\n\u001b[1;32m     87\u001b[0m \u001b[39mwith\u001b[39;00m torch\u001b[39m.\u001b[39mautograd\u001b[39m.\u001b[39mprofiler\u001b[39m.\u001b[39mrecord_function(profile_name):\n\u001b[0;32m---> 88\u001b[0m     \u001b[39mreturn\u001b[39;00m func(\u001b[39m*\u001b[39;49margs, \u001b[39m*\u001b[39;49m\u001b[39m*\u001b[39;49mkwargs)\n",
-      "File \u001b[0;32m~/miniconda3/envs/rome/lib/python3.9/site-packages/transformers/optimization.py:349\u001b[0m, in \u001b[0;36mAdamW.step\u001b[0;34m(self, closure)\u001b[0m\n\u001b[1;32m    346\u001b[0m \u001b[39m# Decay the first and second moment running average coefficient\u001b[39;00m\n\u001b[1;32m    347\u001b[0m \u001b[39m# In-place operations to update the averages at the same time\u001b[39;00m\n\u001b[1;32m    348\u001b[0m exp_avg\u001b[39m.\u001b[39mmul_(beta1)\u001b[39m.\u001b[39madd_(grad, alpha\u001b[39m=\u001b[39m(\u001b[39m1.0\u001b[39m \u001b[39m-\u001b[39m beta1))\n\u001b[0;32m--> 349\u001b[0m exp_avg_sq\u001b[39m.\u001b[39;49mmul_(beta2)\u001b[39m.\u001b[39;49maddcmul_(grad, grad, value\u001b[39m=\u001b[39;49m\u001b[39m1.0\u001b[39;49m \u001b[39m-\u001b[39;49m beta2)\n\u001b[1;32m    350\u001b[0m denom \u001b[39m=\u001b[39m exp_avg_sq\u001b[39m.\u001b[39msqrt()\u001b[39m.\u001b[39madd_(group[\u001b[39m\"\u001b[39m\u001b[39meps\u001b[39m\u001b[39m\"\u001b[39m])\n\u001b[1;32m    352\u001b[0m step_size \u001b[39m=\u001b[39m group[\u001b[39m\"\u001b[39m\u001b[39mlr\u001b[39m\u001b[39m\"\u001b[39m]\n",
+      "\u001b[1;32m/home/local_arnab/Codes/EmoGPT/A2_Full_Finetuning/A2__Full_Finetuning.ipynb Cell 14\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m     <a href='vscode-notebook-cell:/home/local_arnab/Codes/EmoGPT/A2_Full_Finetuning/A2__Full_Finetuning.ipynb#X15sZmlsZQ%3D%3D?line=60'>61</a>\u001b[0m     scheduler\u001b[39m.\u001b[39mstep()\n\u001b[1;32m     <a href='vscode-notebook-cell:/home/local_arnab/Codes/EmoGPT/A2_Full_Finetuning/A2__Full_Finetuning.ipynb#X15sZmlsZQ%3D%3D?line=62'>63</a>\u001b[0m     optimizer\u001b[39m.\u001b[39mzero_grad()\n\u001b[0;32m---> <a href='vscode-notebook-cell:/home/local_arnab/Codes/EmoGPT/A2_Full_Finetuning/A2__Full_Finetuning.ipynb#X15sZmlsZQ%3D%3D?line=63'>64</a>\u001b[0m     model\u001b[39m.\u001b[39;49mzero_grad()\n\u001b[1;32m     <a href='vscode-notebook-cell:/home/local_arnab/Codes/EmoGPT/A2_Full_Finetuning/A2__Full_Finetuning.ipynb#X15sZmlsZQ%3D%3D?line=66'>67</a>\u001b[0m \u001b[39mif\u001b[39;00m(num_prompts_optimized \u001b[39m%\u001b[39m \u001b[39m1000\u001b[39m \u001b[39m==\u001b[39m \u001b[39m0\u001b[39m):\n\u001b[1;32m     <a href='vscode-notebook-cell:/home/local_arnab/Codes/EmoGPT/A2_Full_Finetuning/A2__Full_Finetuning.ipynb#X15sZmlsZQ%3D%3D?line=67'>68</a>\u001b[0m     \u001b[39mprint\u001b[39m(\u001b[39mf\u001b[39m\u001b[39m\"\u001b[39m\u001b[39moptimized for \u001b[39m\u001b[39m{\u001b[39;00mnum_prompts_optimized\u001b[39m}\u001b[39;00m\u001b[39m comments\u001b[39m\u001b[39m\"\u001b[39m)\n",
+      "File \u001b[0;32m~/miniconda3/envs/rome/lib/python3.9/site-packages/torch/nn/modules/module.py:1786\u001b[0m, in \u001b[0;36mModule.zero_grad\u001b[0;34m(self, set_to_none)\u001b[0m\n\u001b[1;32m   1784\u001b[0m \u001b[39melse\u001b[39;00m:\n\u001b[1;32m   1785\u001b[0m     p\u001b[39m.\u001b[39mgrad\u001b[39m.\u001b[39mrequires_grad_(\u001b[39mFalse\u001b[39;00m)\n\u001b[0;32m-> 1786\u001b[0m p\u001b[39m.\u001b[39;49mgrad\u001b[39m.\u001b[39;49mzero_()\n",
       "\u001b[0;31mKeyboardInterrupt\u001b[0m: "
      ]
     }
@@ -407,11 +345,20 @@
     "    if(tokenized['input_ids'].shape[1] > max_token_per_comment):\n",
     "        print(f\"BLOCKED ==> {tokenized['input_ids'].shape[1]}\")\n",
     "        continue\n",
+    "    \n",
+    "    with nethook.TraceDict(\n",
+    "        model,\n",
+    "        [embedder, layer_norm_final, unembedder],\n",
+    "    ) as traces:\n",
+    "        outputs = model(\n",
+    "            **tokenized, \n",
+    "            labels=tokenized['input_ids']\n",
+    "        )\n",
     "\n",
-    "    outputs = model(\n",
-    "        **tokenized, \n",
-    "        labels=tokenized['input_ids']\n",
-    "    )\n",
+    "    # outputs = model(\n",
+    "    #     **tokenized, \n",
+    "    #     labels=tokenized['input_ids']\n",
+    "    # )\n",
     "    loss = outputs.loss\n",
     "    loss.backward()\n",
     "\n",
@@ -435,7 +382,8 @@
     "        os.makedirs(save_path, exist_ok = True)\n",
     "        torch.save(model.state_dict(), f\"{save_path}/finetuned_{num_prompts_optimized}.pth\")\n",
     "        with open(f\"{save_path}/loss_track_{num_prompts_optimized}.json\", \"w\") as f:\n",
-    "            json.dump(loss_track, f)   "
+    "            json.dump(loss_track, f)\n",
+    "    # break"
    ]
   },
   {
