prompt-tuning working fine for 50k movie reviews -- modified  in the model utils to support promt-tuning -- prefix-tuning base idea implemented, need to test

--- a/A2_Full_Finetuning/A2_Finetuning_CLF.ipynb
+++ b/A2_Full_Finetuning/A2_Finetuning_CLF.ipynb
@@ -592,17 +592,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 25,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "loaded checkpoint\n",
+      "loaded model weights\n"
+     ]
+    }
+   ],
    "source": [
     "checkpoint = torch.load('../Saved_weights/Fine-Tuned_CLF__IMDB_50K/gpt2-medium/finetuned_0.pth')\n",
-    "# model.load_state_dict(checkpoint)"
+    "print(\"loaded checkpoint\")\n",
+    "model.load_state_dict(checkpoint)\n",
+    "print(\"loaded model weights\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -611,11 +622,15 @@
      "text": [
       "<REVIEW>: This was an awesome movie <SENTIMENT>\n",
       "<REVIEW>: This was an awesome movie <SENTIMENT> positive negative negative negative positive\n",
-      "p(answer):  p(' positive'[3967])=0.9482, p(' negative'[4633])=0.0518, p(' Positive'[33733])=0.0, p(' positives'[38548])=0.0, p('positive'[24561])=0.0\n",
+      "p(answer):  p(' positive'[3967])=0.9482, p(' negative'[4633])=0.0517, p(' Positive'[33733])=0.0, p(' positives'[38548])=0.0, p('positive'[24561])=0.0\n",
       "\n",
       "<REVIEW>: This was a bad movie <SENTIMENT>\n",
       "<REVIEW>: This was a bad movie <SENTIMENT> negative positive positive positive positive\n",
-      "p(answer):  p(' negative'[4633])=0.806, p(' positive'[3967])=0.1939, p(' Negative'[36183])=0.0, p(' Positive'[33733])=0.0, p(' positives'[38548])=0.0\n",
+      "p(answer):  p(' negative'[4633])=0.8058, p(' positive'[3967])=0.1941, p(' Negative'[36183])=0.0, p(' Positive'[33733])=0.0, p(' positives'[38548])=0.0\n",
+      "\n",
+      "<REVIEW>: This movie is gross <SENTIMENT>\n",
+      "<REVIEW>: This movie is gross <SENTIMENT> negative positive positive positive positive positive\n",
+      "p(answer):  p(' negative'[4633])=0.5934, p(' positive'[3967])=0.4065, p(' Positive'[33733])=0.0, p(' Negative'[36183])=0.0, p(' positives'[38548])=0.0\n",
       "\n"
      ]
     }
@@ -624,6 +639,7 @@
     "prompt = [\n",
     "    \"This was an awesome movie\",\n",
     "    \"This was a bad movie\",\n",
+    "    \"This movie is gross\"\n",
     "]\n",
     "\n",
     "prompt = [\"<REVIEW>: \" + p + \" <SENTIMENT>\" for p in prompt]\n",
@@ -649,7 +665,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      " 17%|█▋        | 337/2000 [22:31<2:09:29,  4.67s/it]"
+      "100%|██████████| 2000/2000 [2:03:28<00:00,  3.70s/it]  \n"
      ]
     }
    ],
@@ -692,15 +708,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "27 3\n",
-      "5 25\n"
+      "4123 855\n",
+      "431 3891\n"
      ]
     }
    ],
@@ -711,6 +727,30 @@
     "\n",
     "print(tp, fp)\n",
     "print(fn, tn)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.8626031101983391"
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "sensitivity = tp/(tp + fn)\n",
+    "specificity = tn/(tn + fp)\n",
+    "balanced_acc = (sensitivity + specificity)/2\n",
+    "\n",
+    "balanced_acc"
    ]
   },
   {
